crates/arity-parser/tests/snapshots/parser_snapshots__expr_logical_relational_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..93
  BINARY_EXPR@0..9
    IDENT@0..1 "x"
    WHITESPACE@1..2 " "
    OR@2..3 "|"
    WHITESPACE@3..4 " "
    BINARY_EXPR@4..9
      IDENT@4..5 "y"
      WHITESPACE@5..6 " "
      AND@6..7 "&"
      WHITESPACE@7..8 " "
      IDENT@8..9 "z"
  NEWLINE@9..10 "\n"
  BINARY_EXPR@10..21
    IDENT@10..11 "x"
    WHITESPACE@11..12 " "
    OR2@12..14 "||"
    WHITESPACE@14..15 " "
    BINARY_EXPR@15..21
      IDENT@15..16 "y"
      WHITESPACE@16..17 " "
      AND2@17..19 "&&"
      WHITESPACE@19..20 " "
      IDENT@20..21 "z"
  NEWLINE@21..22 "\n"
  BINARY_EXPR@22..28
    IDENT@22..23 "x"
    WHITESPACE@23..24 " "
    EQUAL2@24..26 "=="
    WHITESPACE@26..27 " "
    IDENT@27..28 "y"
  NEWLINE@28..29 "\n"
  BINARY_EXPR@29..35
    IDENT@29..30 "x"
    WHITESPACE@30..31 " "
    NOT_EQUAL@31..33 "!="
    WHITESPACE@33..34 " "
    IDENT@34..35 "y"
  NEWLINE@35..36 "\n"
  BINARY_EXPR@36..41
    IDENT@36..37 "x"
    WHITESPACE@37..38 " "
    LESS_THAN@38..39 "<"
    WHITESPACE@39..40 " "
    IDENT@40..41 "y"
  NEWLINE@41..42 "\n"
  BINARY_EXPR@42..48
    IDENT@42..43 "x"
    WHITESPACE@43..44 " "
    LESS_THAN_OR_EQUAL@44..46 "<="
    WHITESPACE@46..47 " "
    IDENT@47..48 "y"
  NEWLINE@48..49 "\n"
  BINARY_EXPR@49..54
    IDENT@49..50 "x"
    WHITESPACE@50..51 " "
    GREATER_THAN@51..52 ">"
    WHITESPACE@52..53 " "
    IDENT@53..54 "y"
  NEWLINE@54..55 "\n"
  BINARY_EXPR@55..61
    IDENT@55..56 "x"
    WHITESPACE@56..57 " "
    GREATER_THAN_OR_EQUAL@57..59 ">="
    WHITESPACE@59..60 " "
    IDENT@60..61 "y"
  NEWLINE@61..62 "\n"
  BINARY_EXPR@62..76
    BINARY_EXPR@62..71
      BINARY_EXPR@62..67
        IDENT@62..63 "x"
        WHITESPACE@63..64 " "
        PLUS@64..65 "+"
        WHITESPACE@65..66 " "
        INT@66..67 "1"
      WHITESPACE@67..68 " "
      GREATER_THAN@68..69 ">"
      WHITESPACE@69..70 " "
      IDENT@70..71 "y"
    WHITESPACE@71..72 " "
    AND2@72..74 "&&"
    WHITESPACE@74..75 " "
    IDENT@75..76 "z"
  NEWLINE@76..77 "\n"
  BINARY_EXPR@77..92
    BINARY_EXPR@77..82
      IDENT@77..78 "x"
      WHITESPACE@78..79 " "
      LESS_THAN@79..80 "<"
      WHITESPACE@80..81 " "
      IDENT@81..82 "y"
    WHITESPACE@82..83 " "
    OR2@83..85 "||"
    WHITESPACE@85..86 " "
    BINARY_EXPR@86..92
      IDENT@86..87 "z"
      WHITESPACE@87..88 " "
      PIPE@88..90 "|>"
      WHITESPACE@90..91 " "
      IDENT@91..92 "f"
  NEWLINE@92..93 "\n"
