crates/arity-parser/tests/snapshots/parser_snapshots__expr_missing_rhs_diagnostics.snap
---
source: tests/parser_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "expected right-hand side for binary operator",
        start: 2,
        end: 3,
    },
]
