crates/arity-parser/tests/snapshots/parser_snapshots__expr_newline_binary_break_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..70
  BINARY_EXPR@0..7
    IDENT@0..1 "x"
    WHITESPACE@1..2 " "
    PLUS@2..3 "+"
    NEWLINE@3..4 "\n"
    WHITESPACE@4..6 "  "
    IDENT@6..7 "y"
  NEWLINE@7..8 "\n"
  BINARY_EXPR@8..15
    IDENT@8..9 "x"
    WHITESPACE@9..10 " "
    STAR@10..11 "*"
    NEWLINE@11..12 "\n"
    WHITESPACE@12..14 "  "
    IDENT@14..15 "y"
  NEWLINE@15..16 "\n"
  ASSIGNMENT_EXPR@16..24
    IDENT@16..17 "x"
    WHITESPACE@17..18 " "
    ASSIGN_LEFT@18..20 "<-"
    NEWLINE@20..21 "\n"
    WHITESPACE@21..23 "  "
    IDENT@23..24 "y"
  NEWLINE@24..25 "\n"
  IDENT@25..26 "x"
  NEWLINE@26..27 "\n"
  UNARY_EXPR@27..30
    PLUS@27..28 "+"
    WHITESPACE@28..29 " "
    IDENT@29..30 "y"
  NEWLINE@30..31 "\n"
  BINARY_EXPR@31..39
    IDENT@31..32 "x"
    WHITESPACE@32..33 " "
    PIPE@33..35 "|>"
    NEWLINE@35..36 "\n"
    WHITESPACE@36..38 "  "
    IDENT@38..39 "f"
  NEWLINE@39..40 "\n"
  BINARY_EXPR@40..45
    IDENT@40..41 "a"
    WHITESPACE@41..42 " "
    PLUS@42..43 "+"
    WHITESPACE@43..44 " "
    IDENT@44..45 "b"
  NEWLINE@45..46 "\n"
  UNARY_EXPR@46..49
    PLUS@46..47 "+"
    WHITESPACE@47..48 " "
    IDENT@48..49 "c"
  NEWLINE@49..50 "\n"
  UNARY_EXPR@50..54
    TILDE@50..51 "~"
    IDENT@51..54 "foo"
  NEWLINE@54..55 "\n"
  UNARY_EXPR@55..59
    TILDE@55..56 "~"
    IDENT@56..59 "bar"
  NEWLINE@59..60 "\n"
  BINARY_EXPR@60..65
    IDENT@60..61 "a"
    WHITESPACE@61..62 " "
    PLUS@62..63 "+"
    WHITESPACE@63..64 " "
    IDENT@64..65 "b"
  NEWLINE@65..66 "\n"
  UNARY_EXPR@66..69
    TILDE@66..67 "~"
    WHITESPACE@67..68 " "
    IDENT@68..69 "c"
  NEWLINE@69..70 "\n"
