crates/arity-parser/tests/snapshots/parser_snapshots__expr_not_precedence_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..43
  UNARY_EXPR@0..7
    BANG@0..1 "!"
    BINARY_EXPR@1..7
      IDENT@1..2 "a"
      WHITESPACE@2..3 " "
      EQUAL2@3..5 "=="
      WHITESPACE@5..6 " "
      IDENT@6..7 "b"
  NEWLINE@7..8 "\n"
  UNARY_EXPR@8..14
    BANG@8..9 "!"
    BINARY_EXPR@9..14
      IDENT@9..10 "a"
      WHITESPACE@10..11 " "
      PLUS@11..12 "+"
      WHITESPACE@12..13 " "
      IDENT@13..14 "b"
  NEWLINE@14..15 "\n"
  BINARY_EXPR@15..21
    UNARY_EXPR@15..17
      BANG@15..16 "!"
      IDENT@16..17 "a"
    WHITESPACE@17..18 " "
    AND@18..19 "&"
    WHITESPACE@19..20 " "
    IDENT@20..21 "b"
  NEWLINE@21..22 "\n"
  BINARY_EXPR@22..28
    UNARY_EXPR@22..24
      BANG@22..23 "!"
      IDENT@23..24 "a"
    WHITESPACE@24..25 " "
    OR@25..26 "|"
    WHITESPACE@26..27 " "
    IDENT@27..28 "b"
  NEWLINE@28..29 "\n"
  UNARY_EXPR@29..42
    BANG@29..30 "!"
    BINARY_EXPR@30..42
      CALL_EXPR@30..34
        IDENT@30..31 "f"
        LPAREN@31..32 "("
        ARG_LIST@32..33
          ARG@32..33
            IDENT@32..33 "x"
        RPAREN@33..34 ")"
      WHITESPACE@34..35 " "
      EQUAL2@35..37 "=="
      WHITESPACE@37..38 " "
      CALL_EXPR@38..42
        IDENT@38..39 "g"
        LPAREN@39..40 "("
        ARG_LIST@40..41
          ARG@40..41
            IDENT@40..41 "y"
        RPAREN@41..42 ")"
  NEWLINE@42..43 "\n"
