crates/arity-parser/tests/snapshots/parser_snapshots__expr_right_assoc_power_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..10
  BINARY_EXPR@0..9
    INT@0..1 "2"
    WHITESPACE@1..2 " "
    CARET@2..3 "^"
    WHITESPACE@3..4 " "
    BINARY_EXPR@4..9
      INT@4..5 "3"
      WHITESPACE@5..6 " "
      CARET@6..7 "^"
      WHITESPACE@7..8 " "
      INT@8..9 "4"
  NEWLINE@9..10 "\n"
