crates/arity-parser/tests/snapshots/parser_snapshots__expr_separators_tokens_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..16
  IDENT@0..1 "x"
  SEMICOLON@1..2 ";"
  WHITESPACE@2..3 " "
  IDENT@3..4 "y"
  NEWLINE@4..5 "\n"
  CALL_EXPR@5..15
    IDENT@5..6 "f"
    LPAREN@6..7 "("
    ARG_LIST@7..14
      ARG@7..8
        IDENT@7..8 "a"
      COMMA@8..9 ","
      WHITESPACE@9..10 " "
      ARG@10..11
        IDENT@10..11 "b"
      COMMA@11..12 ","
      WHITESPACE@12..13 " "
      ARG@13..14
        IDENT@13..14 "c"
    RPAREN@14..15 ")"
  NEWLINE@15..16 "\n"
