crates/arity-parser/tests/snapshots/parser_snapshots__expr_tilde_unary_and_binary_cst.snap
---
source: tests/parser_snapshots.rs
assertion_line: 13
expression: tree
---
ROOT@0..28
  UNARY_EXPR@0..4
    TILDE@0..1 "~"
    IDENT@1..4 "foo"
  SEMICOLON@4..5 ";"
  WHITESPACE@5..6 " "
  UNARY_EXPR@6..14
    TILDE@6..7 "~"
    BINARY_EXPR@7..14
      IDENT@7..9 ".x"
      WHITESPACE@9..10 " "
      PLUS@10..11 "+"
      WHITESPACE@11..12 " "
      IDENT@12..14 ".y"
  SEMICOLON@14..15 ";"
  WHITESPACE@15..16 " "
  BINARY_EXPR@16..21
    IDENT@16..17 "y"
    WHITESPACE@17..18 " "
    TILDE@18..19 "~"
    WHITESPACE@19..20 " "
    IDENT@20..21 "x"
  SEMICOLON@21..22 ";"
  WHITESPACE@22..23 " "
  BINARY_EXPR@23..27
    INT@23..24 "1"
    TILDE@24..25 "~"
    UNARY_EXPR@25..27
      TILDE@25..26 "~"
      INT@26..27 "2"
  NEWLINE@27..28 "\n"
